# novyx-hygiene

./: .gitignore  README.md  pyproject.toml
.claude/: hygiene.md
.github/workflows/: publish.yml
novyx_hygiene/: __init__.py  cli.py  context.py  hooks.py  storage.py  writer.py
tests/: test_cli.py  test_context.py  test_hooks.py  test_writer.py
