[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novyx-hygiene"
version = "1.0.0"
description = "Context hygiene for agentic coding. Save and resume Claude Code/Codex sessions."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Novyx Labs", email = "hello@novyxlabs.com"}
]
keywords = ["ai", "agents", "claude", "codex", "context", "memory", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
novyx = ["novyx>=3.0.0"]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
hygiene = "novyx_hygiene.cli:cli"

[project.urls]
Homepage = "https://github.com/novyxlabs/novyx-hygiene"
Documentation = "https://github.com/novyxlabs/novyx-hygiene#readme"
Repository = "https://github.com/novyxlabs/novyx-hygiene"
Issues = "https://github.com/novyxlabs/novyx-hygiene/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["novyx_hygiene*"]
