[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novyx-hygiene"
version = "2.0.0"
description = "Context hygiene for agentic coding. Auto-save and auto-resume Claude Code sessions."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Novyx Labs", email = "blake@novyxlabs.com"}
]
keywords = ["ai", "agents", "claude", "codex", "context", "memory", "hooks", "session"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
novyx = ["novyx>=3.0.0"]
dev = ["pytest>=7.0", "black", "ruff==0.15.2", "mypy==1.19.1"]

[project.scripts]
hygiene = "novyx_hygiene.cli:main"

[project.urls]
Homepage = "https://novyxlabs.com"
Documentation = "https://novyxlabs.com/docs"
Repository = "https://github.com/novyxlabs/novyx-hygiene"
Issues = "https://github.com/novyxlabs/novyx-hygiene/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["novyx_hygiene*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.9"
files = ["novyx_hygiene"]
ignore_missing_imports = true
warn_unused_ignores = true
